@@ -1,5 +1,7 @@
 package add_docker_metadata
 
+import "time"
+
 // Config for docker processor
 type Config struct {
 	Host        string     `config:"host"`
@@ -7,6 +9,10 @@ type Config struct {
 	Fields      []string   `config:"match_fields"`
 	MatchSource bool       `config:"match_source"`
 	SourceIndex int        `config:"match_source_index"`
+
+	// Annotations are kept after container is killled, until they haven't been accessed
+	// for a full `cleanup_timeout`:
+	CleanupTimeout time.Duration `config:"cleanup_timeout"`
 }
 
 // TLSConfig for docker socket connection
